--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -6,19 +6,21 @@ type Props = HTMLAttributes<'a'>;
 const { href, class: className, ...props } = Astro.props;
 
 const { pathname } = Astro.url;
-const isActive = href === pathname || href === pathname.replace(/\/$/, '');
+const link = href?.toString() || '';
+const isActive = link === '/' ? pathname === link : pathname.startsWith(link);
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
-	<slot />
+<a
+  href={href}
+  class="inline-block no-underline"
+  class:list={[className, { active: isActive }]}
+  {...props}
+>
+  <slot />
 </a>
 <style>
-	a {
-		display: inline-block;
-		text-decoration: none;
-	}
-	a.active {
-		font-weight: bolder;
-		text-decoration: underline;
-	}
+  a.active {
+    font-weight: bolder;
+    text-decoration: underline;
+  }
 </style>
