--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,107 +5,63 @@ import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
+import { Image } from 'astro:assets';
+import placeholder from '../../assets/blog-placeholder.jpg';
 
 const posts = (await getCollection('blog')).sort(
-	(a, b) => a.data.pubDate.valueOf() - b.data.pubDate.valueOf()
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<style>
-			main {
-				width: 960px;
-			}
-			ul {
-				display: flex;
-				flex-wrap: wrap;
-				gap: 2rem;
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-			}
-			ul li {
-				width: calc(50% - 1rem);
-			}
-			ul li * {
-				text-decoration: none;
-				transition: 0.2s ease;
-			}
-			ul li:first-child {
-				width: 100%;
-				margin-bottom: 1rem;
-				text-align: center;
-			}
-			ul li:first-child img {
-				width: 100%;
-			}
-			ul li:first-child .title {
-				font-size: 2.369rem;
-			}
-			ul li img {
-				margin-bottom: 0.5rem;
-				border-radius: 12px;
-			}
-			ul li a {
-				display: block;
-			}
-			.title {
-				margin: 0;
-				color: rgb(var(--black));
-				line-height: 1;
-			}
-			.date {
-				margin: 0;
-				color: rgb(var(--gray));
-			}
-			ul li a:hover h4,
-			ul li a:hover .date {
-				color: rgb(var(--accent));
-			}
-			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
-			@media (max-width: 720px) {
-				ul {
-					gap: 0.5em;
-				}
-				ul li {
-					width: 100%;
-					text-align: center;
-				}
-				ul li:first-child {
-					margin-bottom: 0;
-				}
-				ul li:first-child .title {
-					font-size: 1.563em;
-				}
-			}
-		</style>
-	</head>
-	<body>
-		<Header />
-		<main>
-			<section>
-				<ul>
-					{
-						posts.map((post) => (
-							<li>
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
-									<h4 class="title">{post.data.title}</h4>
-									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
-									</p>
-								</a>
-							</li>
-						))
-					}
-				</ul>
-			</section>
-		</main>
-		<Footer />
-	</body>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body>
+    <Header />
+    <main class="w-[960px]">
+      <section>
+        <ul
+          class="flex flex-wrap md:gap-8 list-none m-0 p-0 gap-4 justify-around"
+        >
+          {
+            posts.map((post) => (
+              <li class="w-full md:w-[48%] text-center md:text-start group">
+                <a href={`/blog/${post.slug}/`} class="block">
+                  {
+                    <Image
+                      class="mb-2 rounded-xl group-hover:shadow-xl group-hover:rounded-sm transition-all duration-500"
+                      src={post.data.heroImage ?? placeholder}
+                      width={720}
+                      height={360}
+                      alt=""
+                      transition:name={`hero-image-${post.slug}`}
+                      transition:animate="morph"
+                    />
+                  }
+                  <h3
+                    class="font-semibold group-hover:text-blue-800 transition-colors duration-500 text-lg"
+                    transition:name={`title-${post.slug}`}
+                    transition:animate="morph"
+                  >
+                    {post.data.title}
+                  </h3>
+                  <p class="text-gray-500 text-base">
+                    <span
+                      transition:name={`date-${post.slug}`}
+                      transition:animate="morph"
+                    >
+                      <FormattedDate date={post.data.pubDate} />
+                    </span>
+                  </p>
+                </a>
+              </li>
+            ))
+          }
+        </ul>
+      </section>
+    </main>
+    <Footer />
+  </body>
 </html>
