--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -43,7 +43,7 @@ const { title, description, pubDate, updatedDate, heroImage, slug } =
             heroImage && (
               <Image
                 src={heroImage}
-                class="block mx-auto rounded-lg shadow-xl"
+                class="block mx-auto rounded-lg shadow-xl aspect-video object-cover"
                 width={1020}
                 height={510}
                 alt=""
