--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -31,6 +31,10 @@ const { title, description, image = '/blog-placeholder.jpg' } = Astro.props;
 <meta name="title" content={title} />
 <meta name="description" content={description} />
 
+<!-- Prevent  search engines from indexing the page -->
+<meta name="robots" content="noindex, nofollow, noimageindex" />
+<meta name="AdsBot-Google" content="noindex" />
+
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
