--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,9 +1,9 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
+import BaseHead from '~/components/BaseHead.astro';
+import Header from '~/components/Header.astro';
+import Footer from '~/components/Footer.astro';
+import FormattedDate from '~/components/FormattedDate.astro';
 import { Image } from 'astro:assets';
 
 type Props = CollectionEntry<'blog'>['data'] & {
@@ -48,7 +48,6 @@ const { title, description, pubDate, updatedDate, heroImage, slug } =
                 height={510}
                 alt=""
                 transition:name={`hero-image-${slug}`}
-                transition:animate="morph"
               />
             )
           }
@@ -58,7 +57,7 @@ const { title, description, pubDate, updatedDate, heroImage, slug } =
         >
           <div class="my-4 text-center leading-tight">
             <div class="mb-2 text-gray-500">
-              <span transition:name={`date-${slug}`} transition:animate="morph">
+              <span transition:name={`date-${slug}`}>
                 <FormattedDate date={pubDate} /></span
               >
               {
@@ -72,7 +71,6 @@ const { title, description, pubDate, updatedDate, heroImage, slug } =
             <h1
               class="mb-2"
               transition:name={`title-${slug}`}
-              transition:animate="morph"
             >
               {title}
             </h1>
