--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,10 +1,12 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
+import { type CollectionEntry, getCollection } from 'astro:content';
 import BlogPost from '../layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
-  return posts.map((post) => ({
+  return posts
+  .filter((post) => post.data.published)
+  .map((post) => ({
     params: { slug: post.slug },
     props: post,
   }));
