--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -5,11 +5,11 @@ import BlogPost from '../layouts/BlogPost.astro';
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
   return posts
-  .filter((post) => post.data.published)
-  .map((post) => ({
-    params: { slug: post.slug },
-    props: post,
-  }));
+    .filter((post) => !post.data.draft)
+    .map((post) => ({
+      params: { slug: post.slug },
+      props: post,
+    }));
 }
 type Props = CollectionEntry<'blog'>;
 
